ADD: Se genera dist con cambios en estilos para centrar th

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -12,7 +12,7 @@ ptable table > thead > tr > th > span {
 }
 
 .text-center {
-  text-align: center;
+  text-align: center !important;
 }
 
 /* LOADING */
