FIX: Se soluciona fix con flechas asc y desc en th

--- a/src/app/components/pit_table/pit-table.html
+++ b/src/app/components/pit_table/pit-table.html
@@ -12,7 +12,7 @@
               {{ column.name }}
               <fieldset ng-if="column.sort && $ctrl.ptData.length">
                 <i class="pull-right fa " ng-class="$ctrl.thIconClass(column.sort)" ng-if="$ctrl.uiFramework === 'bootstrap'"></i>
-                <md-icon class="md-sort-icon" ng-class="$ctrl.thIconClass(column.sort)" ng-if="$ctrl.uiFramework === 'material'" ng-bind="$ctrl.thMdIcon(column.sort)"></md-icon>
+                <md-icon class="md-sort-icon" ng-class="$ctrl.thIconClass(column.sort)" ng-if="$ctrl.uiFramework === 'material'">arrow_upward</md-icon>
                 </fieldset>
             </span>
           </th>
