--- a/src/app/components/pit_table/pit-table.html
+++ b/src/app/components/pit_table/pit-table.html
@@ -1,7 +1,7 @@
-<div dw-loading="data" ng-class="{ 'md-table-container' : $ctrl.uiFramework === 'material', 'container-fluid': $ctrl.uiFramework === 'bootstrap', 'table-container': !$ctrl.uiFramework }">
-  <pttoolbar></pttoolbar>
+<div  ng-class="{ 'md-table-container' : $ctrl.uiFramework === 'material', 'container-fluid': $ctrl.uiFramework === 'bootstrap', 'table-container': !$ctrl.uiFramework }">
+  <pttoolbar is-loading="$ctrl.isLoading"></pttoolbar>
   <div ng-class="{'md-card-pitable' : $ctrl.uiFramework === 'material'}">
-    <table ng-class="{ 'table table-bordered table-striped table-responsive': $ctrl.uiFramework === 'bootstrap', 'md-table': $ctrl.uiFramework === 'material', 'md-row-select': $ctrl.uiFramework === 'material' && $ctrl.ptParams.selectId, 'dw-loading-container': $ctrl.isLoading }">
+    <table ng-class="{ 'table table-bordered table-striped table-responsive': $ctrl.uiFramework === 'bootstrap', 'md-table': $ctrl.uiFramework === 'material', 'md-row-select': $ctrl.uiFramework === 'material' && $ctrl.ptParams.selectId }">
       <thead ng-class="{ 'md-head': $ctrl.uiFramework === 'material' }">
         <tr ng-class="{ 'md-row': $ctrl.uiFramework === 'material' }">
           <th ng-if="$ctrl.ptParameters.selectId && $ctrl.ptData.length" ng-class="{'th-checkbox' : $ctrl.uiFramework === 'bootstrap' || !$ctrl.uiFramework, 'padding-only-left' : $ctrl.uiFramework === 'material'}">
@@ -19,7 +19,7 @@
         </tr>
       </thead>
       <tbody ng-class="{ 'md-body': $ctrl.uiFramework === 'material' }">
-        <tr ng-class="{ 'md-row': $ctrl.uiFramework === 'material' }" ng-repeat="data in $ctrl.ptData">
+        <tr ng-class="{ 'md-row': $ctrl.uiFramework === 'material' }" ng-repeat="data in $ctrl.ptData" ng-if="!$ctrl.isLoading">
           <td ng-if="$ctrl.ptParameters.selectId" class="td-checkbox" ng-class="{ 'md-cell md-checkbox-cell': $ctrl.uiFramework === 'material' }">
             <ptcheckbox in-header="false" item="data"></ptcheckbox>
           </td>
@@ -28,7 +28,9 @@
             <ptdrender ng-if="column.render" directive-name="column.render" pt-data="data"></ptdrender>
           </td>
         </tr>
-        <tr ng-if="!$ctrl.ptData.length" class="text-center"><td colspan="{{ $ctrl.ptColumns.length }}">{{ $ctrl.emptyTableText }}</td></tr>
+        <tr ng-if="$ctrl.isLoading || !$ctrl.ptData.length" ng-class="{ 'md-row': $ctrl.uiFramework === 'material' }"  style="height: 90px;">
+          <td ng-class="{ 'md-cell': $ctrl.uiFramework === 'material' }" class="text-center" colspan="{{ $ctrl.ptColumns.length }}">{{ $ctrl.isLoading ? $ctrl.loadingTableText : $ctrl.emptyTableText }}</td>
+        </tr>
       </tbody>
     </table>
     <ptpage></ptpage>
