--- a/src/app/components/pit_table/pit-table-pagination.html
+++ b/src/app/components/pit_table/pit-table-pagination.html
@@ -19,7 +19,7 @@
 	<div class="item-md-table-paginator">
 		<span> {{ $ctrl.showInfoMaterial() }} </span>
 	</div>
-	<div class="item-md-table-paginator">
+	<div class="item-md-table-paginator last-item">
 		<button class="md-icon-button md-button md-ink-ripple margin-0" type="button" ng-click="$ctrl.previous()" ng-disabled="$ctrl.ptableCtrl.utils.pagination.page == 0">
           <md-icon class="material-icons"><i class="material-icons">keyboard_arrow_left</i></md-icon>
         </button>
