ADD: Se Cambia extension de csv a xlsx, se ingresa formato de nombre a archivo <NOMBRE_TABLA>_<TIMESTAMP>.xlsx. Se cambiar libreria ng-csv a js-xlsx

--- a/src/app/components/pit_table/pit-table-toolbar.html
+++ b/src/app/components/pit_table/pit-table-toolbar.html
@@ -11,7 +11,7 @@
         <button class="md-icon-button md-button md-ink-ripple" type="button" ng-click="$ctrl.removeSearch()" ng-if="$ctrl.filterModel">
           <md-icon class="material-icons">close</md-icon>
         </button>
-        <button class="md-icon-button md-button md-ink-ripple" type="button" ng-csv="$ctrl.downloadCSV()" csv-label="true" filename="export.csv">
+        <button class="md-icon-button md-button md-ink-ripple" type="button" ng-click="$ctrl.downloadCSV()">
           <md-icon class="material-icons">file_download</md-icon>
         </button>
       </div>
